feat(wip): partner badges

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -294,13 +294,37 @@
 	</ng-template>
 
 	<ng-template #networkBadgesTemplate>
-		<div
-			class="tw-mt-12 tw-bg-oebgrey tw-rounded-[5px] tw-px-2 tw-py-4 tw-flex tw-gap-1 tw-text-oebblack tw-text-lg tw-leading-[130%]"
-		>
-			<span class="tw-font-bold">1. {{ 'Issuer.partnerBadges' | translate }}:</span>
-			<span [innerHTML]="'Issuer.noBadgesApprovedForNetworks' | translate: { issuer: issuer.name }"></span>
-		</div>
-		@if (networkBadgeInstanceResults) {
+		@if (!sharedNetworkBadgeResults.length) {
+			<div
+				class="tw-mt-12 tw-bg-oebgrey tw-rounded-[5px] tw-px-2 tw-py-4 tw-flex tw-gap-1 tw-text-oebblack tw-text-lg tw-leading-[130%]"
+			>
+				<span class="tw-font-bold">1. {{ 'Issuer.partnerBadges' | translate }}:</span>
+				<span [innerHTML]="'Issuer.noBadgesApprovedForNetworks' | translate: { issuer: issuer.name }"></span>
+			</div>
+		} @else {
+			<div class="tw-mt-12 tw-bg-[#F8F6FC]">
+				<div class="tw-px-2 tw-py-4 tw-flex tw-gap-1 tw-text-purple tw-text-lg tw-leading-[130%]">
+					<span class="tw-font-bold">1. {{ 'Issuer.networkBadges' | translate }}:</span>
+					<span [innerHTML]="'Issuer.badgesApprovedForNetworks' | translate: { issuer: issuer.name }"></span>
+				</div>
+				@for (badge of sharedNetworkBadgeResults; track badge.badge.slug) {
+					<div
+						class="tw-px-2 tw-py-2 tw-gap-2 tw-flex tw-items-center tw-font-semibold tw-text-lg tw-leading-[130%] tw-uppercase tw-text-oebblack"
+					>
+						<img class="tw-w-12" [src]="badge.badge.image" alt="Badge Image" />
+						<span>{{ badge.badge.name }}</span>
+					</div>
+
+					<badges-datatable
+						[badges]="sharedNetworkBadgeResults"
+						(directBadgeAward)="routeToBadgeAward($event, issuer)"
+						(qrCodeAward)="routeToQRCodeAward($event, issuer)"
+						(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, $event.focusRequests)"
+					></badges-datatable>
+				}
+			</div>
+		}
+		@if (networkBadgeInstanceResults.length) {
 			<div class="tw-mt-12 tw-bg-[#F8F6FC]">
 				<div class="tw-px-2 tw-py-4 tw-flex tw-gap-1 tw-text-purple tw-text-lg tw-leading-[130%]">
 					<span class="tw-font-bold">2. {{ 'Issuer.networkBadges' | translate }}:</span>
@@ -325,7 +349,10 @@
 				}
 			</div>
 		} @else {
-			<div class="tw-bg-oebgrey tw-rounded-[5px] tw-px-2 tw-py-4">
+			<div
+				class="tw-mt-6 tw-bg-oebgrey tw-rounded-[5px] tw-px-2 tw-py-4 tw-flex tw-gap-1 tw-text-oebblack tw-text-lg tw-leading-[130%]"
+			>
+				<span class="tw-font-bold">2. {{ 'Issuer.networkBadges' | translate }}:</span>
 				<span [innerHTML]="'Issuer.noAwardedNetworkBadges' | translate: { issuer: issuer.name }"></span>
 			</div>
 		}
