fix: auto-fixable problems after eslint changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,11 +58,11 @@
 					<!-- Language -->
 					<div class="navitem" class="tw-flex tw-gap-1 tw-items-center tw-text-purple tw-text-[18px]/[1.2em]">
 						<button (click)="changeLng('de')" class="tw-text-purple tw-text-[length:inherit]">
-							<span [ngStyle]="{ 'font-weight': selectedLng == 'de' ? 'bold' : 'normal' }">DE</span>
+							<span [ngStyle]="{ 'font-weight': selectedLng === 'de' ? 'bold' : 'normal' }">DE</span>
 						</button>
 						<span>|</span>
 						<button (click)="changeLng('en')" class="tw-text-purple tw-text-[length:inherit]">
-							<span [ngStyle]="{ 'font-weight': selectedLng == 'en' ? 'bold' : 'normal' }">EN</span>
+							<span [ngStyle]="{ 'font-weight': selectedLng === 'en' ? 'bold' : 'normal' }">EN</span>
 						</button>
 						<ng-icon hlm name="lucideGlobe" class="tw-ml-1"></ng-icon>
 					</div>
@@ -132,11 +132,11 @@
 					<!-- Language -->
 					<div class="navitem" class="tw-flex tw-gap-1 tw-items-center tw-text-purple tw-text-[18px]/[1.2em]">
 						<button (click)="changeLng('de')" class="tw-text-purple tw-text-[length:inherit]">
-							<span [ngStyle]="{ 'font-weight': selectedLng == 'de' ? 'bold' : 'normal' }">DE</span>
+							<span [ngStyle]="{ 'font-weight': selectedLng === 'de' ? 'bold' : 'normal' }">DE</span>
 						</button>
 						<span>|</span>
 						<button (click)="changeLng('en')" class="tw-text-purple tw-text-[length:inherit]">
-							<span [ngStyle]="{ 'font-weight': selectedLng == 'en' ? 'bold' : 'normal' }">EN</span>
+							<span [ngStyle]="{ 'font-weight': selectedLng === 'en' ? 'bold' : 'normal' }">EN</span>
 						</button>
 						<ng-icon hlm name="lucideGlobe" class="tw-ml-1"></ng-icon>
 					</div>
@@ -176,11 +176,11 @@
 				<!-- Language -->
 				<div class="mobilenav-x-label tw-flex tw-gap-1 tw-items-center tw-text-white tw-mb-8 tw-mt-8">
 					<button (click)="changeLng('de')" class="tw-text-white tw-text-[14px]/[1.2em]">
-						<span [ngStyle]="{ 'font-weight': selectedLng == 'de' ? 'bold' : 'normal' }">DE</span>
+						<span [ngStyle]="{ 'font-weight': selectedLng === 'de' ? 'bold' : 'normal' }">DE</span>
 					</button>
 					<span class="tw-text-[14px]/[1.2em]">|</span>
 					<button (click)="changeLng('en')" class="tw-text-white tw-text-[14px]/[1.2em]">
-						<span [ngStyle]="{ 'font-weight': selectedLng == 'en' ? 'bold' : 'normal' }">EN</span>
+						<span [ngStyle]="{ 'font-weight': selectedLng === 'en' ? 'bold' : 'normal' }">EN</span>
 					</button>
 				</div>
 
@@ -234,11 +234,11 @@
 				<!-- Language -->
 				<div class="mobilenav-x-label tw-flex tw-gap-1 tw-items-center tw-text-white tw-mb-8 tw-mt-8">
 					<button (click)="changeLng('de')" class="tw-text-white tw-text-[14px]/[1.2em]">
-						<span [ngStyle]="{ 'font-weight': selectedLng == 'de' ? 'bold' : 'normal' }">DE</span>
+						<span [ngStyle]="{ 'font-weight': selectedLng === 'de' ? 'bold' : 'normal' }">DE</span>
 					</button>
 					<span class="tw-text-[14px]/[1.2em]">|</span>
 					<button (click)="changeLng('en')" class="tw-text-white tw-text-[14px]/[1.2em]">
-						<span [ngStyle]="{ 'font-weight': selectedLng == 'en' ? 'bold' : 'normal' }">EN</span>
+						<span [ngStyle]="{ 'font-weight': selectedLng === 'en' ? 'bold' : 'normal' }">EN</span>
 					</button>
 				</div>
 
