--- a/src/app/common/dialogs/nounproject-dialog/nounproject-dialog.component.html
+++ b/src/app/common/dialogs/nounproject-dialog/nounproject-dialog.component.html
@@ -102,7 +102,7 @@
 				}
 			</div>
 			<!-- Language warning -->
-			@if (translate.currentLang != 'en') {
+			@if (translate.currentLang !== 'en') {
 				<div class="category u-padding-xaxis3x u-margin-top2x warning">
 					<p>Bitte nutze englische Begriffe zum Suchen der Icons.</p>
 				</div>
