--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1034,7 +1034,7 @@
 							/>
 						</div>
 					</div>
-					@if (category == 'competency') {
+					@if (category === 'competency') {
 						<div class="section tw-text-oebblack tw-mt-6">
 							<h2 hlmH2 class="tw-pt-1 tw-px-1 tw-mr-auto !tw-text-oebblack">
 								{{ 'Badge.awardCriteria' | translate }}
