--- a/src/app/issuer/components/badgeclass-edit-copypermissions/badgeclass-edit-copypermissions.component.html
+++ b/src/app/issuer/components/badgeclass-edit-copypermissions/badgeclass-edit-copypermissions.component.html
@@ -6,12 +6,12 @@
 		<div class="oeb-section-sm tw-max-w-[1016px] !tw-pb-0">
 			<div class="oeb-headline-container-sm !tw-pb-0">
 				<h1 hlmH1 class="tw-text-purple tw-font-black">
-					@if (category == 'participation') {
+					@if (category === 'participation') {
 						<span>
 							{{ 'Issuer.createParticipationBadge' | translate }}
 						</span>
 					}
-					@if (category == 'competency') {
+					@if (category === 'competency') {
 						<span>
 							{{ 'Issuer.createCompetencyBadge' | translate }}
 						</span>
