--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -200,7 +200,7 @@
 											>
 												{{ config.version }}
 												<info-icon>
-													@if (config.version == '3.0') {
+													@if (config.version === '3.0') {
 														<span [innerHTML]="'Badge.standard-info-30' | translate"></span>
 													} @else {
 														<span [innerHTML]="'Badge.standard-info-20' | translate"></span>
