--- a/src/app/issuer/components/qrcode-awards/qrcode-awards.component.html
+++ b/src/app/issuer/components/qrcode-awards/qrcode-awards.component.html
@@ -44,7 +44,7 @@
 										</span>
 										<span class="tw-ml-2">
 											({{
-												award.request_count == 1
+												award.request_count === 1
 													? ('QrCode.openRequestsOne' | translate)
 													: ('QrCode.openRequests'
 														| translate: { count: award.request_count })
