--- a/src/app/recipient/components/recipient-badge-collection-selection-dialog/recipient-badge-collection-selection-dialog.component.html
+++ b/src/app/recipient/components/recipient-badge-collection-selection-dialog/recipient-badge-collection-selection-dialog.component.html
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 
-		@if (badgeCollectionsResults.length == 0) {
+		@if (badgeCollectionsResults.length === 0) {
 			<div class="bordered bordered-top">No Available Collections</div>
 		}
 	</div>
