--- a/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
+++ b/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
@@ -68,7 +68,7 @@
 							<div
 								(click)="filterByTag(tag)"
 								class="tag tag-wrapper tag-button"
-								[class.tag-button-pressed]="selectedTag == tag"
+								[class.tag-button-pressed]="selectedTag === tag"
 							>
 								{{ tag }}
 							</div>
@@ -103,7 +103,7 @@
 					{{ issuerGroup.issuerName }}
 					<span class="u-text-small-semibold-caps u-text-dark4 u-margin-left2x"
 						>{{ issuerGroup.learningpaths.length }}
-						{{ issuerGroup.learningpaths.length == 1 ? 'LearningPath' : 'LearningPaths' }}</span
+						{{ issuerGroup.learningpaths.length === 1 ? 'LearningPath' : 'LearningPaths' }}</span
 					>
 				</h3>
 				<div class="tw-grid min-[450px]:tw-grid-cols-learningpaths tw-gap-6 tw-items-center">
@@ -125,7 +125,7 @@
 				</div>
 			}
 		}
-		@if (learningPathResults.length >= 20 || (currentPage == totalPages && currentPage != 1)) {
+		@if (learningPathResults.length >= 20 || (currentPage === totalPages && currentPage !== 1)) {
 			<div class="tw-mt-8">
 				<oeb-numbered-pagination
 					[totalProducts]="isFiltered() ? filteredMicroDegrees.length : learningPaths.length"
