--- a/src/app/issuer/components/ai-assistant/ai-assistant.component.html
+++ b/src/app/issuer/components/ai-assistant/ai-assistant.component.html
@@ -77,7 +77,7 @@
 					<span
 						class="tw-absolute tw-bottom-1 tw-right-2 tw-pointer-events-none"
 						[ngClass]="
-							aiCompetenciesDescription.length < 70 || aiCompetenciesDescription.length == 1200
+							aiCompetenciesDescription.length < 70 || aiCompetenciesDescription.length === 1200
 								? 'tw-text-red'
 								: 'tw-text-gray-600'
 						"
