--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -49,7 +49,7 @@
 										[noTopMargin]="true"
 										[errorMessage]="{
 											required: giveBadgeTitle,
-											mustChange: changeBadgeTitle
+											mustChange: changeBadgeTitle,
 										}"
 									>
 									</oeb-input>
@@ -347,7 +347,7 @@
 														class="tw-absolute tw-bottom-1 tw-right-2 tw-pointer-events-none"
 														[ngClass]="
 															aiCompetenciesDescription.length < 70 ||
-															aiCompetenciesDescription.length == 1200
+															aiCompetenciesDescription.length === 1200
 																? 'tw-text-red'
 																: 'tw-text-gray-600'
 														"
@@ -535,8 +535,8 @@
 										[trigger]="collapseCompetenciesTrigger"
 										[defaultOpen]="collapsedCompetenciesOpen"
 										[closeable]="
-											badgeClassForm.controls.competencies.controls.length == 0 &&
-											badgeClassForm.controls.keywordCompetencies.controls.length == 0
+											badgeClassForm.controls.competencies.controls.length === 0 &&
+											badgeClassForm.controls.keywordCompetencies.controls.length === 0
 										"
 									>
 										<ng-template #collapseCompetenciesTrigger>
@@ -597,7 +597,7 @@
 																'bottom.px': calculateDropdownBottom(
 																	keywordCompetenciesInput,
 																	100
-																)
+																),
 															}"
 														>
 															<ul>
@@ -616,7 +616,7 @@
 																	</li>
 																}
 																@if (
-																	keywordCompetenciesResult.length == 0 &&
+																	keywordCompetenciesResult.length === 0 &&
 																	!keywordCompetenciesLoading &&
 																	keywordCompetenciesLoaded
 																) {
@@ -834,7 +834,7 @@
 															"
 															[optionMap]="competencyCategoryOptions"
 															[errorMessage]="{
-																required: competencyCategoryError
+																required: competencyCategoryError,
 															}"
 															[noTopMargin]="true"
 															[disabled]="
@@ -868,7 +868,7 @@
 																		class="tw-max-w-40"
 																		[control]="competency.rawControlMap.hours"
 																		[errorMessage]="{
-																			max: maxValue1000
+																			max: maxValue1000,
 																		}"
 																		[noTopMargin]="true"
 																	>
@@ -880,7 +880,7 @@
 																		class="tw-max-w-40"
 																		[control]="competency.rawControlMap.minutes"
 																		[errorMessage]="{
-																			max: minMaxError
+																			max: minMaxError,
 																		}"
 																		[noTopMargin]="true"
 																	>
@@ -1128,7 +1128,7 @@
 									[maxchar]="4"
 									[min]="1"
 									[errorMessage]="{
-										max: maxValue1000
+										max: maxValue1000,
 									}"
 								></oeb-input>
 								<oeb-select
@@ -1181,7 +1181,9 @@
 					type="button"
 					[text]="next"
 					(click)="nextStep()"
-					[umamiEvent]="!existingBadgeClass ? `create-${category}-badge-${this.stepper?.selectedIndex + 1}` : undefined"
+					[umamiEvent]="
+						!existingBadgeClass ? `create-${category}-badge-${this.stepper?.selectedIndex + 1}` : undefined
+					"
 				/>
 			}
 
@@ -1203,7 +1205,11 @@
 							: 'General.save'
 						) | translate
 					}}"
-					[umamiEvent]="!existingBadgeClass ? `create-${category}-badge-done-${this.stepper?.selectedIndex + 1}` : undefined"
+					[umamiEvent]="
+						!existingBadgeClass
+							? `create-${category}-badge-done-${this.stepper?.selectedIndex + 1}`
+							: undefined
+					"
 				>
 				</oeb-button>
 			}
