--- a/src/app/issuer/components/network-list/network-list.component.html
+++ b/src/app/issuer/components/network-list/network-list.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-	@if (networks().length == 0) {
+	@if (networks().length === 0) {
 		<p class="tw-pb-4 tw-mt-10 tw-flex tw-flex-col tw-text-lg tw-text-oebblack tw-leading-[130%]">
 			<span class="tw-font-bold tw-mb-2" [innerHTML]="'Network.noIssuerInNetwork' | translate"></span>
 			<span class="tw-mt-1" [innerHTML]="'Network.networksUseBadgesTogether' | translate"></span>
