fix: eslint issues

--- a/src/app/issuer/components/ai-assistant/ai-assistant.component.html
+++ b/src/app/issuer/components/ai-assistant/ai-assistant.component.html
@@ -105,7 +105,7 @@
 					<img width="32" height="32" src="assets/oeb/images/badge/loading.svg" />
 				}
 			</div>
-			@if (aiCompetenciesSuggestions.length != 0) {
+			@if (aiCompetenciesSuggestions.length !== 0) {
 				<div class="tw-mt-6 md:tw-mt-8 tw-w-full">
 					<h2 class="tw-font-bold tw-text-[22px] tw-mb-2">
 						{{ 'CreateBadge.fitting' | translate }}
