--- a/src/app/issuer/components/badgeclass-create/badgeclass-create.component.html
+++ b/src/app/issuer/components/badgeclass-create/badgeclass-create.component.html
@@ -45,7 +45,7 @@
 				<badgeclass-edit-form
 					#badgeimage
 					(save)="badgeClassCreated($event)"
-					(cancel)="creationCanceled()"
+					(cancelEdit)="creationCanceled()"
 					[scrolled]="scrolled"
 					[issuer]="issuer"
 					[category]="category"
