--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -380,7 +380,7 @@
 													/>
 												}
 											</div>
-											@if (aiCompetenciesSuggestions.length != 0) {
+											@if (aiCompetenciesSuggestions.length !== 0) {
 												<div class="tw-mt-6 md:tw-mt-8 tw-w-full">
 													<h2 class="tw-font-bold tw-text-[22px] tw-mb-2">
 														{{ 'CreateBadge.fitting' | translate }}
@@ -651,7 +651,7 @@
 													</div>
 												</div>
 											</div>
-											@if (selectedKeywordCompetencies.length != 0) {
+											@if (selectedKeywordCompetencies.length !== 0) {
 												<div class="tw-mt-6 md:tw-mt-8 tw-w-full">
 													@for (
 														keywordCompetency of badgeClassForm.controls.keywordCompetencies
