--- a/src/app/issuer/components/badgeclass-edit/badgeclass-edit.component.html
+++ b/src/app/issuer/components/badgeclass-edit/badgeclass-edit.component.html
@@ -18,7 +18,7 @@
 		<badgeclass-edit-form
 			#badgeimage
 			(save)="badgeClassSaved($event)"
-			(cancel)="editingCanceled()"
+			(cancelEdit)="editingCanceled()"
 			[issuer]="issuer"
 			[badgeClass]="badgeClass"
 			[scrolled]="scrolled"
