fix: run prettier

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -57,7 +57,7 @@
 										tabindex="-1"
 										[routerLink]="[
 											'/auth/request-password-reset',
-											loginForm.rawControlMap.username.value
+											loginForm.rawControlMap.username.value,
 										]"
 										>{{ 'Login.forgotPassword?' | translate }}</a
 									>
