--- a/src/app/auth/components/new-password/new-password.component.html
+++ b/src/app/auth/components/new-password/new-password.component.html
@@ -52,7 +52,7 @@
 							[errorMessage]="{
 								required: enterNewPassword,
 								minlength: mustBe8Char,
-								passwordComplexity: passwordInsecure
+								passwordComplexity: passwordInsecure,
 							}"
 							[fieldType]="'password'"
 							sublabel="{{ 'Profile.passwordMinRequirements' | translate }}"
@@ -63,7 +63,7 @@
 							label="{{ 'Profile.repeatNewPassword' | translate }}"
 							[errorMessage]="{
 								required: enterNewPasswordConfirmation,
-								passwordsMatch: passwordsDoNotMatch
+								passwordsMatch: passwordsDoNotMatch,
 							}"
 							[fieldType]="'password'"
 							[errorGroup]="changePasswordForm"
