--- a/src/app/auth/components/reset-password/reset-password.component.html
+++ b/src/app/auth/components/reset-password/reset-password.component.html
@@ -30,7 +30,7 @@
 							[errorMessage]="{
 								required: enterNewPassword,
 								minlength: mustBe8Char,
-								passwordComplexity: passwordInsecure
+								passwordComplexity: passwordInsecure,
 							}"
 							[fieldType]="'password'"
 							sublabel="{{ 'Profile.passwordMinRequirements' | translate }}"
@@ -41,7 +41,7 @@
 							label="{{ 'Login.confirmNewPassword' | translate }}"
 							[errorMessage]="{
 								required: enterNewPasswordConfirmation,
-								passwordsMatch: passwordsDoNotMatch
+								passwordsMatch: passwordsDoNotMatch,
 							}"
 							[fieldType]="'password'"
 							[errorGroup]="changePasswordForm"
