--- a/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
+++ b/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
@@ -276,7 +276,7 @@
 											class="u-text-body-semibold"
 											[ngClass]="{
 												'u-text-dark2': !narrativeEnabled,
-												'u-text-dark4': narrativeEnabled
+												'u-text-dark4': narrativeEnabled,
 											}"
 										>
 											Narrativ
@@ -300,7 +300,7 @@
 											class="u-text-body-semibold"
 											[ngClass]="{
 												'u-text-dark2': !evidenceEnabled,
-												'u-text-dark4': evidenceEnabled
+												'u-text-dark4': evidenceEnabled,
 											}"
 										>
 											Nachweis
@@ -324,7 +324,7 @@
 											class="u-text-body-semibold"
 											[ngClass]="{
 												'u-text-dark2': !expirationEnabled,
-												'u-text-dark4': expirationEnabled
+												'u-text-dark4': expirationEnabled,
 											}"
 										>
 											Ablaufdatum
