--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -90,16 +90,16 @@
 		[options]="[
 			{
 				label: 'Issuer.schoolLabel' | translate,
-				value: 'schule'
+				value: 'schule',
 			},
 			{
 				label: 'Issuer.universityLabel' | translate,
-				value: 'hochschule'
+				value: 'hochschule',
 			},
 			{
 				label: 'Issuer.othersLabel' | translate,
-				value: 'andere'
-			}
+				value: 'andere',
+			},
 		]"
 		#issuer_category
 	></oeb-select>
