--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -15,7 +15,7 @@
 								| translate
 									: {
 											role:
-												'Network.role.' + network().currentUserStaffMember.roleSlug | translate
+												'Network.role.' + network().currentUserStaffMember.roleSlug | translate,
 									  }
 						}}</span
 					>
