--- a/src/app/profile/components/change-password/change-password.component.html
+++ b/src/app/profile/components/change-password/change-password.component.html
@@ -36,7 +36,7 @@
 					[errorMessage]="{
 						required: enterYourNewPassword,
 						minlength: mustBe8Char,
-						passwordComplexity: passwordInsecure
+						passwordComplexity: passwordInsecure,
 					}"
 					[errorOverride]="!!errors['password']"
 					[fieldType]="'password'"
@@ -50,7 +50,7 @@
 					[errorMessage]="{
 						required: enterNewPasswordConfirmation,
 						minlength: PasswordsDoNotMatch,
-						passwordComplexity: passwordInsecure
+						passwordComplexity: passwordInsecure,
 					}"
 					[fieldType]="'password'"
 					#confirmNewPassword_field
