--- a/src/breakdown/static/scss/_preview--collated.hbs
+++ b/src/breakdown/static/scss/_preview--collated.hbs
@@ -3,9 +3,24 @@
 	<head>
 		{{render '@preview--head'}}
 		<style type='text/css'>
-			table { table-layout: fixed; width: 100%; } td, th { border-bottom: 1px solid lightgrey; padding: 1em; }
-			td:first-child { font-weight: bold; text-align: left; } thead th { border-bottom-width: 3px; font-weight:
-			bold; text-align: left; }
+			table {
+				table-layout: fixed;
+				width: 100%;
+			}
+			td,
+			th {
+				border-bottom: 1px solid lightgrey;
+				padding: 1em;
+			}
+			td:first-child {
+				font-weight: bold;
+				text-align: left;
+			}
+			thead th {
+				border-bottom-width: 3px;
+				font-weight: bold;
+				text-align: left;
+			}
 		</style>
 	</head>
 
