--- a/src/breakdown/static/scss/_preview--tablewrapper.hbs
+++ b/src/breakdown/static/scss/_preview--tablewrapper.hbs
@@ -3,8 +3,17 @@
 	<head>
 		{{render '@preview--head'}}
 		<style type='text/css'>
-			table{ border-collapse: collapse; } table th{ text-align: left; } tbody tr > td:first-of-type{} tbody tr >
-			td{ padding-left: 20px; }
+			table {
+				border-collapse: collapse;
+			}
+			table th {
+				text-align: left;
+			}
+			tbody tr > td:first-of-type {
+			}
+			tbody tr > td {
+				padding-left: 20px;
+			}
 		</style>
 	</head>
 
