--- a/src/breakdown/static/scss/_screen.scss
+++ b/src/breakdown/static/scss/_screen.scss
@@ -104,8 +104,9 @@ strong {
 	'layouts/l-marginBottom/l-marginBottom', 'layouts/l-marginLeft/l-marginLeft', 'layouts/l-marginTop/l-marginTop',
 	'layouts/l-maxWidth/l-maxWidth', 'layouts/l-offsetbottom/l-offsetbottom', 'layouts/l-offsetleft/l-offsetleft',
 	'layouts/l-offsetright/l-offsetright', 'layouts/l-offsettop/l-offsettop',
-	'layouts/l-overflowhorizontal/l-overflowhorizontal', 'layouts/l-overflowhorizontalhidden/l-overflowhorizontalhidden',
-	'layouts/l-overflowlist/l-overflowlist', 'layouts/l-scroll-pin/l-scroll-pin',
+	'layouts/l-overflowhorizontal/l-overflowhorizontal',
+	'layouts/l-overflowhorizontalhidden/l-overflowhorizontalhidden', 'layouts/l-overflowlist/l-overflowlist',
+	'layouts/l-scroll-pin/l-scroll-pin',
 	// Share Pane
 	'layouts/l-sharepane/l-sharepane',
 	// Square Icon Cards
@@ -143,11 +144,12 @@ strong {
 	'modules/formmodules/formdivider/formdivider', 'modules/formmodules/formfield/formfield',
 	'modules/formmodules/formimage/formimage', 'modules/formmodules/forminline/forminline',
 	'modules/formmodules/formmessage/formmessage', 'modules/formmodules/formradiobutton/formradiobutton',
-	'modules/formmodules/formsectionremove/formsectionremove', 'modules/formmodules/formsectiontoggle/formsectiontoggle',
-	'modules/header/header', 'modules/heading/heading', 'modules/hidden/hidden', 'modules/importHeading/importHeading',
-	'modules/inactive/inactive', 'modules/intergration/integration', 'modules/integrationthumb/integrationthumb',
-	'modules/issuer/issuer', 'modules/loading/loading', 'modules/loadingerror/loadingerror', 'modules/logo/logo',
-	'modules/linklist/linklist', 'modules/markdowneditor/markdowneditor',
+	'modules/formmodules/formsectionremove/formsectionremove',
+	'modules/formmodules/formsectiontoggle/formsectiontoggle', 'modules/header/header', 'modules/heading/heading',
+	'modules/hidden/hidden', 'modules/importHeading/importHeading', 'modules/inactive/inactive',
+	'modules/intergration/integration', 'modules/integrationthumb/integrationthumb', 'modules/issuer/issuer',
+	'modules/loading/loading', 'modules/loadingerror/loadingerror', 'modules/logo/logo', 'modules/linklist/linklist',
+	'modules/markdowneditor/markdowneditor',
 	// Menu Modules
 	'modules/menumodules/menu/menu',
 	'modules/menumodules/menumore/menumore', 'modules/menumodules/menumoreitem/menumoreitem',
