--- a/src/app/issuer/components/network-invite-confirmation/network-invite-confirmation.component.html
+++ b/src/app/issuer/components/network-invite-confirmation/network-invite-confirmation.component.html
@@ -13,7 +13,7 @@
 								| translate
 									: {
 											networkName: invite.network.name,
-											issuerName: invite.issuer.name
+											issuerName: invite.issuer.name,
 									  }
 						"
 					></p>
@@ -32,7 +32,7 @@
 								| translate
 									: {
 											networkName: invite.network.name,
-											issuerName: invite.issuer.name
+											issuerName: invite.issuer.name,
 									  }
 						"
 					></p>
